* `assertOrder` in order to make the names more consistent and preserves the old behaviour of `verifyStrictOrder`
* `assertProxy` as alternative to `verify`
* iosSimulatorArm64 support
* support for instrumented Android tests (aka androidAndroidTest) on KMP
* Multi-Interface Mocks support
* interface receiver members are full supported
* `runs` for FunProxies to mitigate the strict assignment policy in terms of SideEffects

=== Changed

* Generated mocks don't contain runtime logic any longer
* Mutable properties of Proxies now separate froze/unfrozen state is cleaner to improve Runtime
* `kmock` and `kspy` are using now a shared function to improve compile time
* Non intrusive behaviour (spy & relaxation) is now resolved by proxy invocation rather then by proxy initialisation in order to cover edge cases
* Assertion-/VerificationChain is not coupled any longer directly to proxies and provide improved error messages
* Expectation-methods do not bleed into the global context any longer
* `verifyStrictOrder` is now used for total order of certain Proxies but allows partial order between different Proxies
* Android MinSDK 23 -> 21
* `spyOn` is now capable of picking up KMock defined Aliases
* `kspy` in terms of generics not longer exposed if not declared via `spyOn` or `spiesOnly`
* relaxation method gets now the return type boundaries delegated, if generic in order to resolve type conflicts
* generic methods names get prefixed by the generic type name, if overloaded to avoid name collisions

=== Deprecated

* `uselessPrefixes` in the Gradle Extension

=== Removed

* `allowedRecursiveTypes`, since it is no longer needed due to the new spy invocation
* `allowInterfacesOnKmock`, use allowInterfaces instead
* `allowInterfacesOnKspy`, use allowInterfaces instead
* old experimental ProxyAssertion family, use `assertProxy` or `verify` instead

=== Fixed

* Method names with nullable or multi-bounded types defined as generic parameter