@@ -219,4 +219,8 @@ class SyncFunProxyStub(
     override fun runs(action: () -> Any): KMockContract.ProxySideEffectBuilder<Any, () -> Any> {
         TODO("Not yet implemented")
     }
+
+    override fun run(action: () -> Any) {
+        TODO("Not yet implemented")
+    }
 }
